@@ -20,6 +20,7 @@ package org.apache.lucene.index;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 
 /** Base class for implementing {@link CompositeReader}s based on an array
@@ -48,6 +49,8 @@ import java.util.List;
  */
 public abstract class BaseCompositeReader<R extends IndexReader> extends CompositeReader {
   private final R[] subReaders;
+  /** A comparator for sorting sub-readers */
+  protected final Comparator<R> subReadersSorter;
   private final int[] starts;       // 1st docno for each reader
   private final int maxDoc;
   private int numDocs = -1;         // computed lazily
@@ -63,9 +66,15 @@ public abstract class BaseCompositeReader<R extends IndexReader> extends Composi
    * subreader for docID-based methods. <b>Please note:</b> This array is <b>not</b>
    * cloned and not protected for modification, the subclass is responsible 
    * to do this.
+   * @param subReadersSorter – a comparator for sorting sub readers. If not {@code null}, this
+   * comparator is used to sort sub readers, before using the for resolving doc IDs.
    */
-  protected BaseCompositeReader(R[] subReaders) throws IOException {
+  protected BaseCompositeReader(R[] subReaders, Comparator<R> subReadersSorter) throws IOException {
+    if (subReadersSorter != null) {
+      Arrays.sort(subReaders, subReadersSorter);
+    }
     this.subReaders = subReaders;
+    this.subReadersSorter = subReadersSorter;
     this.subReadersList = Collections.unmodifiableList(Arrays.asList(subReaders));
     starts = new int[subReaders.length + 1];    // build starts array
     long maxDoc = 0;
