@@ -19,6 +19,7 @@ package org.apache.lucene.index;
 
 import java.io.PrintStream;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.stream.Collectors;
 
 import org.apache.lucene.analysis.Analyzer;
@@ -59,7 +60,7 @@ public final class IndexWriterConfig extends LiveIndexWriterConfig {
   /**
    * Specifies the open mode for {@link IndexWriter}.
    */
-  public static enum OpenMode {
+  public enum OpenMode {
     /** 
      * Creates a new index or overwrites an existing one. 
      */
@@ -492,7 +493,19 @@ public final class IndexWriterConfig extends LiveIndexWriterConfig {
     return this;
   }
 
-  @Override
+  /**
+   * Set the comparator for sorting leaf readers. A DirectoryReader opened from a IndexWriter with
+   * this configuration will have its leaf readers sorted with the provided leaf sorter.
+   *
+   * @param leafSorter – a comparator for sorting leaf readers
+   * @return IndexWriterConfig with leafSorter set.
+   */
+  public IndexWriterConfig setLeafSorter(Comparator<LeafReader> leafSorter) {
+    this.leafSorter = leafSorter;
+    return this;
+  }
+
+    @Override
   public String toString() {
     StringBuilder sb = new StringBuilder(super.toString());
     sb.append("writer=").append(writer.get()).append("\n");
